--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ng build --prod"
+  },
+  "engines": {
+    "node": "14.17.3",
+    "npm": "7.19.1"
   },
   "private": true,
   "dependencies": {
@@ -18,12 +23,18 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@angular-devkit/build-angular": "~12.1.1",
+    "@angular/cli": "~12.1.1",
+    "@angular/compiler-cli": "~12.1.1",
     "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
+    "express": "^4.17.1",
     "jquery": "^3.6.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "typescript": "~4.3.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
